tests/res/super/error_super_call_not_first_statement.say
class A {}

class B : A {
    init() {
        0;
        super(); // error: Super call must be the first statement in an init block
    }
}

B();
